feat: emoji, header, body, footer gui